[gd_scene load_steps=8 format=2]

[ext_resource path="res://floors/floor.gd" type="Script" id=1]
[ext_resource path="res://ladder_down.tscn" type="PackedScene" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://external/aseprite/walls_00.png" type="Texture" id=5]
[ext_resource path="res://external/aseprite/walls_01.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="floor" type="Node2D"]
script = ExtResource( 1 )

[node name="ladder_down" parent="." instance=ExtResource( 3 )]

[node name="y_sort" type="YSort" parent="."]

[node name="player" parent="y_sort" instance=ExtResource( 4 )]
position = Vector2( 308, 166 )

[node name="walls" type="YSort" parent="y_sort"]

[node name="wall_top" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 72, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top"]
texture = ExtResource( 5 )

[node name="wall_top25" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 72 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top25"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top25"]
texture = ExtResource( 5 )

[node name="wall_top26" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 120 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top26"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top26"]
texture = ExtResource( 5 )

[node name="wall_top27" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 168 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top27"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top27"]
texture = ExtResource( 5 )

[node name="wall_top28" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 216 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top28"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top28"]
texture = ExtResource( 5 )

[node name="wall_top29" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 264 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top29"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top29"]
texture = ExtResource( 5 )

[node name="wall_top30" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 312 )
rotation = 1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top30"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top30"]
texture = ExtResource( 5 )

[node name="wall_top31" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 72 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top31"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top31"]
texture = ExtResource( 5 )

[node name="wall_top32" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 120 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top32"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top32"]
texture = ExtResource( 5 )

[node name="wall_top33" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 168 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top33"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top33"]
texture = ExtResource( 5 )

[node name="wall_top34" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 216 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top34"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top34"]
texture = ExtResource( 5 )

[node name="wall_top35" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 264 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top35"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top35"]
texture = ExtResource( 5 )

[node name="wall_top36" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 312 )
rotation = -1.5708
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top36"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top36"]
texture = ExtResource( 5 )

[node name="wall_top2" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 120, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top2"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top2"]
texture = ExtResource( 5 )

[node name="wall_top3" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 168, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top3"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top3"]
texture = ExtResource( 5 )

[node name="wall_top4" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 216, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top4"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top4"]
texture = ExtResource( 5 )

[node name="wall_top5" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 264, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top5"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top5"]
texture = ExtResource( 5 )

[node name="wall_top6" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 312, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top6"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top6"]
texture = ExtResource( 5 )

[node name="wall_top7" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 360, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top7"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top7"]
texture = ExtResource( 5 )

[node name="wall_top8" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 408, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top8"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top8"]
texture = ExtResource( 5 )

[node name="wall_top9" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 456, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top9"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top9"]
texture = ExtResource( 5 )

[node name="wall_top10" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 504, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top10"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top10"]
texture = ExtResource( 5 )

[node name="wall_top11" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 552, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top11"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top11"]
texture = ExtResource( 5 )

[node name="wall_top12" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 600, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top12"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top12"]
texture = ExtResource( 5 )

[node name="wall_top_left_corner" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top_left_corner"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top_left_corner"]
texture = ExtResource( 6 )

[node name="wall_top_left_corner2" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 24 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top_left_corner2"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top_left_corner2"]
texture = ExtResource( 6 )
flip_h = true

[node name="wall_top13" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 72, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top13"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top13"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top14" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 120, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top14"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top14"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top15" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 168, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top15"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top15"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top16" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 216, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top16"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top16"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top17" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 264, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top17"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top17"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top18" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 312, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top18"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top18"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top19" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 360, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top19"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top19"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top20" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 408, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top20"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top20"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top21" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 456, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top21"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top21"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top22" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 504, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top22"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top22"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top23" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 552, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top23"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top23"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top24" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 600, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top24"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top24"]
texture = ExtResource( 5 )
flip_v = true

[node name="wall_top_left_corner3" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 24, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top_left_corner3"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top_left_corner3"]
texture = ExtResource( 6 )
flip_v = true

[node name="wall_top_left_corner4" type="StaticBody2D" parent="y_sort/walls"]
position = Vector2( 648, 360 )
physics_material_override = SubResource( 3 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="y_sort/walls/wall_top_left_corner4"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="y_sort/walls/wall_top_left_corner4"]
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="limit_top_left" type="Position2D" parent="."]

[node name="limit_bottom_right" type="Position2D" parent="."]
position = Vector2( 672, 384 )
